Probability calculations and boilerplate to make them look nice

--- a/A Birthday Problem.ipynb
+++ b/A Birthday Problem.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\n",
+    "\\newcommand\\P[1]{\\mathbb{P}\\left(#1\\right)} % probability\n",
+    "\\newcommand\\given{\\:\\middle\\vert\\:} % conditional\n",
+    "\\newcommand\\E[1]{\\mathbb{E}\\left[#1\\right]} % expectation\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# A Birthday Problem\n",
     "\n",
     "Suppose you're on a party and want to impress everyone with your superior ability to memorize mathematical trivia, and maybe you also want to know their birthdays so you can invite yourself to more parties in the future. Then the [Birthday Problem](https://en.wikipedia.org/wiki/Birthday_problem) might be just perfect for you.\n",
@@ -23,10 +34,39 @@
     "\n",
     "As a further abstraction of the problem described above, consider <abbr title=\"independent and identically distributed\">i.i.d.</abbr> random variables $X_1, X_2, \\ldots$, uniform over $\\{1, \\ldots, n\\}$. Define $K = \\min \\{k : \\exists i < k . X_i = X_k\\}$, i.e. $K$ is the index of the first repetition. Then we are interested in\n",
     "\n",
-    "* $P(K = k)$\n",
-    "* $P(K \\le k)$\n",
-    "* $\\mathbb{E}[K]$"
+    "* $\\P{K = k}$\n",
+    "* $\\P{K \\le k}$\n",
+    "* $\\E{K}$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Probability of a Coincidence\n",
+    "\n",
+    "For $k \\le 1$ those probabilities are easy to determine: there is no way to find two identical values when you do not even have two values yet! Therefore $\\P{K = k} = \\P{K \\le k} = 0$ for $k \\le 1$.\n",
+    "\n",
+    "For $k \\ge 2$, the probabilities can be determined recursively from earlier values as follows:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\P{K = k} &= \\P{K = k \\given K \\ge k}\\P{K \\ge k} \\\\\n",
+    "          &= \\P{K = k \\given K \\ge k}\\left(1 - \\P{K \\le k-1}\\right) \\\\\n",
+    "          &= \\P{X_k \\in \\{X_1, \\ldots, X_{k-1}\\} \\given \\forall i < j < k . X_i \\neq X_j}\\left(1 - \\P{K \\le k-1}\\right) \\\\\n",
+    "          &= \\frac{k-1}{n}\\left(1 - \\P{K \\le k-1}\\right) \\\\\n",
+    "\\P{K \\le k} &= \\P{K \\le k-1 \\vee K = k} \\\\\n",
+    "            &= \\P{K \\le k-1} + \\P{K = k} \\\\\n",
+    "            &= \\P{K \\le k-1} + \\frac{k-1}{n}\\left(1 - \\P{K \\le k-1}\\right) \\\\\n",
+    "            &= \\P{K \\le k-1}\\left(1 - \\frac{k-1}{n}\\right) + \\frac{k-1}{n}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
