TODO for proof of upper bound

--- a/A Birthday Problem.ipynb
+++ b/A Birthday Problem.ipynb
@@ -453,6 +453,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Proving the Upper Bound\n",
+    "<abbr title=\"to be done (as if!)\">TBD</abbr>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
